<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xwj.xwjnote3.ui.RegActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_username"
        android:padding="5dp"
        android:singleLine="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/text_username"
        app:met_floatingLabelTextColor="?attr/colorPrimary"
        app:met_primaryColor="?attr/colorPrimary">


    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:singleLine="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/text_password"
        app:met_floatingLabelTextColor="?attr/colorPrimary"
        app:met_primaryColor="?attr/colorPrimary">

    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_email"
        android:padding="5dp"
        android:singleLine="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/text_email"
        app:met_floatingLabelTextColor="?attr/colorPrimary"
        app:met_primaryColor="?attr/colorPrimary">

    </com.rengwuxian.materialedittext.MaterialEditText>

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_reg" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_text_reg_cancel" />

</LinearLayout>
