<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.xwj.xwjnote3.ui.LoginActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login_username"
        android:padding="5dp"
        android:singleLine="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/text_username"
        app:met_floatingLabelTextColor="?attr/colorPrimary"
        app:met_primaryColor="?attr/colorPrimary">


    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:hint="@string/hint_login_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:singleLine="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelText="@string/text_password"
        app:met_floatingLabelTextColor="?attr/colorPrimary"
        app:met_primaryColor="?attr/colorPrimary">

    </com.rengwuxian.materialedittext.MaterialEditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_login" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_text_reg" />

</LinearLayout>
