<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xwj.xwjnote3.ui.UserInfoActivity">


    <TextView
        android:id="@+id/tv_userInfo_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_sample_username"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_userInfo_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_userInfo_username"
        android:layout_marginTop="20dp"
        android:text="@string/tv_sample_email"
        android:textSize="20sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_userInfo_sync"
        android:text="@string/btn_text_sync"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_userInfo_email"/>
    <Button
        android:id="@+id/btn_userInfo_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_userInfo_sync"
        android:layout_marginTop="10dp"
        android:text="@string/btn_text_logout" />

</RelativeLayout>
